# face-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  schema.sql
.github/workflows/: docker-build.yml
app/: config.py  main.py
app/models/: face_engine.py
app/schemas/: api.py
app/services/: clustering.py  crops.py  db.py  detection.py  quality.py
