[project]
name = "face-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "insightface>=1.0.1",
    "numpy<2.0.0",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.11.0.86",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.49.0",
]
